# pbs-gis

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
plugin/.claude-plugin/: plugin.json
plugin/skills/buffer-zones-workflow/: SKILL.md
plugin/skills/dxf-lageplan-extraction/: SKILL.md
plugin/skills/gis-safety/: SKILL.md
plugin/skills/layout-from-template/: SKILL.md
plugin/skills/qgis-mcp-integration/: SKILL.md
plugin/skills/schutzgebiete-analyse/: SKILL.md
plugin/skills/workflow-authoring/: SKILL.md
src/gis_utils/: __init__.py  alkis_profiles.yaml  catalog.py  georef.py  manifest.py  qgis_bridge.py  reporting.py  runner.py  wfs.py
src/gis_utils/cad/: emit.py
src/gis_utils/sources/: mv_alkis.yaml  mv_dop.yaml  th_alkis.yaml  th_dop20.yaml
src/gis_utils/templates/: __init__.py  apply_qml_style.py  buffer_zones.py  cad_export.py  fetch_flurstuecke.py  layout_from_qpt.py  lines_to_polygon.py  point_buffer_union.py  polygon_difference.py  publish_bilanz.py
src/pbs_gis/: atkis.py  operations.py  ops_pipeline.py  reporting.py  runner.py
src/pbs_gis/cad/: __init__.py  path_array.py
src/pbs_gis/dxf/: __init__.py  extract.py  read.py
src/pbs_gis/templates/: buffer_zones.py  clip_to_flurstuecke.py  polygon_difference.py
tests/: test_atkis_exception_report.py  test_buffer_zones_crs.py  test_cad_emit.py  test_cad_path_array.py  test_dxf_read.py  test_manifest.py  test_operations.py  test_ops_pipeline.py  test_reporting_crs.py  test_runner.py  test_templates_cad.py  test_templates_crs_required.py
