[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gis-utils"
version = "0.14.0"
description = "GIS utilities: DXF extraction, geometry operations, area reporting, WMS vectorization"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "ezdxf>=1.0",
    "geopandas",
    "rasterio",
    "requests",
    "numpy",
    "shapely",
    "Pillow",
    "scipy",
    "scikit-image",
    "matplotlib",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Live QGIS integration via the qgis-mcp plugin (auto-reload, layer add,
# preview rendering, etc.).  Pulls in qgis-mcp's Python client; the QGIS
# plugin itself must be installed separately via QGIS Plugin Manager
# (search "QGIS MCP", by N. Karasiak).  See README → Live QGIS bridge.
qgis = [
    "qgis-mcp @ git+https://github.com/nkarasiak/qgis-mcp.git",
]

[project.scripts]
gis-workflow = "gis_utils.runner:main"

[project.urls]
Repository = "https://github.com/Gunther-Schulz/gis_utils"

[tool.setuptools.package-data]
gis_utils = ["sources/*.yaml", "sources/hooks/*.py"]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
